# agentic-memory

./: .gitignore  README.md  agmem.example.toml  pyproject.toml
docs/: 00-environment.md  01-capability-system.md  02-survey-comparison.md  03-spec-considerations.md  04-architecture.md  05-api-design.md  06-roadmap.md  07-local-llm-setup.md  08-amem-implementation-review.md  09-results-summary.md  10-fidelity-audit.md  11-nemori-study.md  12-code-conventions.md  13-amem-study.md  14-amem-reproduction.md  15-repro-portable-runbook.md
docs/research/: ace-longmemeval.md  fidelity-deep-audit.md  fidelity-round3-paper-code-forensics.md  fidelity-round4-verification.md  fidelity-round5-other-organizers.md  g-memory.md  memoryos-amem.md  nemori-reasoningbank.md  write-path-lifecycle-survey.md  zep-graphiti.md
results/: locomo-conv0-amem.json  locomo-conv0-memoryos.json  locomo-conv0-nemori.json  locomo-conv0-passthrough.json
results/repro/: gpt-4o-mini_all_ingest_seed1.json  gpt-4o-mini_all_ingest_seed2.json  gpt-4o-mini_all_ingest_seed3.json  gpt-4o-mini_all_k10_wujiang_expand-off_run1_seed1.json  gpt-4o-mini_all_k10_wujiang_expand-off_run1_seed2.json  gpt-4o-mini_all_k10_wujiang_expand-off_run1_seed3.json  gpt-4o-mini_all_wujiang_headline.json  gpt-4o-mini_conv0_ingest.json  gpt-4o-mini_conv0_ingest_seed1_c0.json  gpt-4o-mini_conv0_ingest_seed2_c0.json  (+32 more)
scripts/: exp_amem_repro.py  exp_locomo_conv0.py  serve-llm.sh  setup-local-llm.sh  test-engine-matrix.sh
tests/: conftest.py  helpers.py  test_ace.py  test_capabilities.py  test_lifecycle.py  test_locomo.py  test_locomo_eval.py  test_memory.py  test_nemori_fidelity.py  test_organizers.py  test_organizers_phase3.py  test_pipeline_p0.py  test_repro_artifacts.py  test_stores.py  test_structured.py
(+77 files in other folders)
