[project]
name = "agmem"
version = "0.1.0"
description = "Unified agentic memory library: 7 memory methodologies behind one capability-gated API"
authors = [
    { name = "MyungHoon Jin", email = "jinmang2@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.28.1",
    "numpy>=2.5.1",
    "openai>=2.45.0",
    "sqlite-vec>=0.1.9",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[project.scripts]
agmem-mcp = "agmem.mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
embed = ["sentence-transformers>=3.0"]
# Real backend engines (user directive: wire the actual stacks, naive
# in-python fallbacks are banned as runtime defaults — docs/03 §5)
backends = [
    "lancedb>=0.15",
    "qdrant-client>=1.12",
    "chromadb>=0.5",
    "kuzu>=0.7",
    "neo4j>=5.20",
    "pgserver>=0.1.4",
    "psycopg[binary]>=3.1",
]

[tool.uv]
default-groups = ["dev", "embed", "backends"]

[project.optional-dependencies]
train = [
    "transformers>=4.51",
    "datasets>=3.0",
    "peft>=0.14",
    "bitsandbytes>=0.45",
    "accelerate>=1.0",
]
